Fixed the positioning of options on small screen

--- a/journal-react/src/index.scss
+++ b/journal-react/src/index.scss
@@ -1901,6 +1901,7 @@ nav.nav {
   overflow: hidden;
 
   .settings-wrapper {
+    height: 100%;
     width: 800px;
     background: transparent;
   }
